# simple-fastapi

./: README.md  main.py  pyproject.toml
src/: main.py
src/api/v1/: greeting_api.py  router.py
src/api/v2/: random_api.py  router.py
test/: conftest.py  test_main.py
test/api/v1/: test_api_v1.py
test/api/v2/: test_api_v2.py
