[project]
name = "simple-fastapi"
version = "0.1.0"
description = "A simple FastAPI project"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Thibault Phan", email = "thibault2705@gmail.com"}
]
dependencies = []


[project.urls]
Repository = "https://github.com/thibault2705/simple-fastapi"